# gobby-code

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release-gcode.yml  release-gsqz.yml  release.yml
.gobby/: project.json
crates/gcode/: Cargo.toml  README.md
crates/gcode/assets/: SKILL.md
crates/gcode/src/: config.rs  db.rs  main.rs  models.rs  neo4j.rs  output.rs  project.rs  savings.rs  schema.rs  secrets.rs  skill.rs
crates/gcode/src/commands/: graph.rs  index.rs  init.rs  mod.rs  search.rs  status.rs  symbols.rs
crates/gcode/src/index/: indexer.rs  languages.rs  parser.rs  security.rs  walker.rs
crates/gcode/src/search/: fts.rs  graph_boost.rs  rrf.rs  semantic.rs
crates/gsqz/: Cargo.toml  SKILL.md  config.yaml
crates/gsqz/src/: daemon.rs  main.rs
crates/gsqz/src/primitives/: dedup.rs  group.rs
docs/guides/: gcode-development-guide.md  gcode-user-guide.md  gsqz-development-guide.md  gsqz-user-guide.md
src/: config.rs  main.rs  neo4j.rs  progress.rs  project.rs
src/commands/: index.rs  init.rs  search.rs  status.rs
src/index/: indexer.rs
